syntax = "proto3";

package weed.s3;

option go_package = "github.com/seaweedfs/seaweedfs/weed/rpc";

service S3 {
    rpc Configure (S3ConfigureRequest) returns (S3ConfigureResponse) {
    }
}

message S3ConfigureRequest {
    bytes s3_configuration_file_content = 1;
}

message S3ConfigureResponse {
}

message S3CircuitBreakerConfig {
    S3CircuitBreakerOptions global=1;
    map<string, S3CircuitBreakerOptions> buckets= 2;
}

message S3CircuitBreakerOptions {
    bool enabled=1;
    map<string, int64> actions = 2;
}
